--- a/package.json
+++ b/package.json
@@ -13,19 +13,25 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^15.0.0",
+    "@angular/common": "^15.2.9",
     "@angular/core": "^15.0.0",
     "@angular/forms": "^15.0.0",
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
-    "@capacitor/app": "4.1.1",
-    "@capacitor/core": "4.7.3",
-    "@capacitor/haptics": "4.1.0",
-    "@capacitor/keyboard": "4.1.1",
-    "@capacitor/status-bar": "4.1.1",
+    "@capacitor-community/background-geolocation": "^1.2.14",
+    "@capacitor/android": "^5.0.0",
+    "@capacitor/app": "^5.0.2",
+    "@capacitor/core": "^5.0.0",
+    "@capacitor/geolocation": "^5.0.0",
+    "@capacitor/haptics": "^5.0.0",
+    "@capacitor/keyboard": "^5.0.0",
+    "@capacitor/status-bar": "^5.0.0",
     "@ionic/angular": "^7.0.0",
+    "@ionic/storage-angular": "^4.0.0",
+    "cordova-plugin-device": "^2.1.0",
     "ionicons": "^7.0.0",
+    "minimist": "^1.2.8",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
@@ -41,7 +47,7 @@
     "@angular/compiler": "^15.0.0",
     "@angular/compiler-cli": "^15.0.0",
     "@angular/language-service": "^15.0.0",
-    "@capacitor/cli": "4.7.3",
+    "@capacitor/cli": "^5.0.0",
     "@ionic/angular-toolkit": "^9.0.0",
     "@types/jasmine": "~4.0.0",
     "@types/node": "^12.11.1",
