--- a/package.json
+++ b/package.json
@@ -29,11 +29,13 @@
     "@capacitor/status-bar": "^5.0.0",
     "@ionic/angular": "^7.8.1",
     "@ionic/storage-angular": "^4.0.0",
+    "@tomtom-international/web-sdk-maps": "^6.25.0",
     "cordova-plugin-device": "^2.1.0",
     "ionicons": "^7.0.0",
     "minimist": "^1.2.8",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
+    "uuid": "^9.0.1",
     "zone.js": "~0.14.0"
   },
   "devDependencies": {
