--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
     "@ionic/angular": "^7.8.1",
     "@ionic/storage-angular": "^4.0.0",
     "@tomtom-international/web-sdk-maps": "^6.25.0",
+    "@tomtom-international/web-sdk-services": "^6.25.0",
     "cordova-plugin-device": "^2.1.0",
     "ionicons": "^7.0.0",
+    "leaflet": "^1.9.4",
     "minimist": "^1.2.8",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
@@ -52,6 +54,7 @@
     "@capacitor/cli": "^5.0.0",
     "@ionic/angular-toolkit": "^9.0.0",
     "@types/jasmine": "~4.0.0",
+    "@types/leaflet": "^1.9.8",
     "@types/node": "^12.11.1",
     "@typescript-eslint/eslint-plugin": "5.3.0",
     "@typescript-eslint/parser": "5.3.0",
