--- a/package.json
+++ b/package.json
@@ -15,18 +15,18 @@
   "dependencies": {
     "@angular/common": "^17.3.1",
     "@angular/core": "^17.3.1",
-    "@angular/forms": "^17.3.1",
+    "@angular/forms": "^17.3.5",
     "@angular/platform-browser": "^17.3.1",
     "@angular/platform-browser-dynamic": "^17.3.1",
     "@angular/router": "^17.3.1",
     "@capacitor-community/background-geolocation": "^1.2.14",
-    "@capacitor/android": "^5.0.0",
-    "@capacitor/app": "^5.0.2",
-    "@capacitor/core": "^5.0.0",
-    "@capacitor/geolocation": "^5.0.0",
-    "@capacitor/haptics": "^5.0.0",
-    "@capacitor/keyboard": "^5.0.0",
-    "@capacitor/status-bar": "^5.0.0",
+    "@capacitor/android": "6.0.0",
+    "@capacitor/app": "^6.0.0",
+    "@capacitor/core": "^6.0.0",
+    "@capacitor/geolocation": "^6.0.0",
+    "@capacitor/haptics": "^6.0.0",
+    "@capacitor/keyboard": "^6.0.0",
+    "@capacitor/status-bar": "^6.0.0",
     "@ionic/angular": "^7.8.1",
     "@ionic/storage-angular": "^4.0.0",
     "@tomtom-international/web-sdk-maps": "^6.25.0",
@@ -51,7 +51,7 @@
     "@angular/compiler": "^17.3.1",
     "@angular/compiler-cli": "^17.3.1",
     "@angular/language-service": "^17.3.1",
-    "@capacitor/cli": "^5.0.0",
+    "@capacitor/cli": "^6.0.0",
     "@ionic/angular-toolkit": "^9.0.0",
     "@types/jasmine": "~4.0.0",
     "@types/leaflet": "^1.9.8",
