--- a/package.json
+++ b/package.json
@@ -33,9 +33,11 @@
     "@tomtom-international/web-sdk-services": "^6.25.0",
     "cordova-plugin-device": "^2.1.0",
     "ionicons": "^7.0.0",
+    "jquery": "^3.7.1",
     "leaflet": "^1.9.4",
     "minimist": "^1.2.8",
     "rxjs": "~7.5.0",
+    "swiper": "^11.1.1",
     "tslib": "^2.3.0",
     "uuid": "^9.0.1",
     "zone.js": "~0.14.0"
@@ -54,6 +56,7 @@
     "@capacitor/cli": "^6.0.0",
     "@ionic/angular-toolkit": "^9.0.0",
     "@types/jasmine": "~4.0.0",
+    "@types/jquery": "^3.5.29",
     "@types/leaflet": "^1.9.8",
     "@types/node": "^12.11.1",
     "@typescript-eslint/eslint-plugin": "5.3.0",
