--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
   "dependencies": {
     "@angular/common": "^17.3.1",
     "@angular/core": "^17.3.1",
-    "@angular/forms": "^17.3.5",
+    "@angular/forms": "^17.3.6",
     "@angular/platform-browser": "^17.3.1",
-    "@angular/platform-browser-dynamic": "^17.3.1",
-    "@angular/router": "^17.3.1",
-    "@capacitor-community/background-geolocation": "^1.2.14",
+    "@angular/platform-browser-dynamic": "^17.3.6",
+    "@angular/router": "^17.3.6",
+    "@capacitor-community/background-geolocation": "^1.2.17",
     "@capacitor/android": "6.0.0",
     "@capacitor/app": "^6.0.0",
     "@capacitor/core": "^6.0.0",
@@ -27,41 +27,38 @@
     "@capacitor/haptics": "^6.0.0",
     "@capacitor/keyboard": "^6.0.0",
     "@capacitor/status-bar": "^6.0.0",
-    "@ionic/angular": "^7.8.1",
+    "@ionic/angular": "^7.8.6",
     "@ionic/storage-angular": "^4.0.0",
     "@tomtom-international/web-sdk-maps": "^6.25.0",
     "@tomtom-international/web-sdk-services": "^6.25.0",
     "cordova-plugin-device": "^2.1.0",
-    "ionicons": "^7.0.0",
-    "jquery": "^3.7.1",
-    "leaflet": "^1.9.4",
-    "minimist": "^1.2.8",
+    "ionicons": "^7.3.1",
     "rxjs": "~7.5.0",
     "swiper": "^11.1.1",
     "tslib": "^2.3.0",
     "uuid": "^9.0.1",
-    "zone.js": "~0.14.0"
+    "zone.js": "^0.14.5"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^17.3.1",
+    "@angular-devkit/build-angular": "^17.3.6",
     "@angular-eslint/builder": "^17.3.0",
     "@angular-eslint/eslint-plugin": "^17.3.0",
     "@angular-eslint/eslint-plugin-template": "^17.3.0",
     "@angular-eslint/schematics": "^17.3.0",
     "@angular-eslint/template-parser": "^17.3.0",
-    "@angular/cli": "^17.3.1",
+    "@angular/cli": "^17.3.6",
     "@angular/compiler": "^17.3.1",
-    "@angular/compiler-cli": "^17.3.1",
-    "@angular/language-service": "^17.3.1",
+    "@angular/compiler-cli": "^17.3.6",
+    "@angular/language-service": "^17.3.6",
     "@capacitor/cli": "^6.0.0",
     "@ionic/angular-toolkit": "^9.0.0",
     "@types/jasmine": "~4.0.0",
     "@types/jquery": "^3.5.29",
-    "@types/leaflet": "^1.9.8",
-    "@types/node": "^12.11.1",
+    "@types/leaflet": "^1.9.12",
+    "@types/node": "^12.20.55",
     "@typescript-eslint/eslint-plugin": "5.3.0",
     "@typescript-eslint/parser": "5.3.0",
-    "eslint": "^7.6.0",
+    "eslint": "^7.32.0",
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-jsdoc": "30.7.6",
     "eslint-plugin-prefer-arrow": "1.2.2",
