--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^17.3.1",
-    "@angular/core": "^17.3.1",
+    "@angular/common": "^17.3.6",
+    "@angular/core": "^17.3.6",
     "@angular/forms": "^17.3.6",
-    "@angular/platform-browser": "^17.3.1",
+    "@angular/platform-browser": "^17.3.6",
     "@angular/platform-browser-dynamic": "^17.3.6",
     "@angular/router": "^17.3.6",
     "@capacitor-community/background-geolocation": "^1.2.17",
@@ -27,13 +27,16 @@
     "@capacitor/haptics": "^6.0.0",
     "@capacitor/keyboard": "^6.0.0",
     "@capacitor/status-bar": "^6.0.0",
-    "@ionic/angular": "^7.8.6",
+    "@ionic/angular": "^8.1.0",
     "@ionic/storage-angular": "^4.0.0",
+    "@mapbox/mapbox-sdk": "^0.16.0",
     "@tomtom-international/web-sdk-maps": "^6.25.0",
     "@tomtom-international/web-sdk-services": "^6.25.0",
+    "@types/mapbox-gl": "^3.1.0",
     "cordova-plugin-device": "^2.1.0",
-    "ionicons": "^7.3.1",
-    "rxjs": "~7.5.0",
+    "ionicons": "^7.4.0",
+    "mapbox-gl": "^3.3.0",
+    "rxjs": "~7.8.1",
     "swiper": "^11.1.1",
     "tslib": "^2.3.0",
     "uuid": "^9.0.1",
@@ -47,31 +50,29 @@
     "@angular-eslint/schematics": "^17.3.0",
     "@angular-eslint/template-parser": "^17.3.0",
     "@angular/cli": "^17.3.6",
-    "@angular/compiler": "^17.3.1",
+    "@angular/compiler": "^17.3.6",
     "@angular/compiler-cli": "^17.3.6",
     "@angular/language-service": "^17.3.6",
     "@capacitor/cli": "^6.0.0",
-    "@ionic/angular-toolkit": "^9.0.0",
-    "@types/jasmine": "~4.0.0",
-    "@types/jquery": "^3.5.29",
-    "@types/leaflet": "^1.9.12",
-    "@types/node": "^12.20.55",
-    "@typescript-eslint/eslint-plugin": "5.3.0",
-    "@typescript-eslint/parser": "5.3.0",
-    "eslint": "^7.32.0",
-    "eslint-plugin-import": "2.22.1",
-    "eslint-plugin-jsdoc": "30.7.6",
-    "eslint-plugin-prefer-arrow": "1.2.2",
-    "jasmine-core": "~4.3.0",
-    "jasmine-spec-reporter": "~5.0.0",
+    "@ionic/angular-toolkit": "^11.0.1",
+    "@types/jasmine": "~5.1.4",
+    "@types/node": "^20.12.8",
+    "@typescript-eslint/eslint-plugin": "7.8.0",
+    "@typescript-eslint/parser": "7.8.0",
+    "eslint": "^8.57.0",
+    "eslint-plugin-import": "2.29.1",
+    "eslint-plugin-jsdoc": "48.2.3",
+    "eslint-plugin-prefer-arrow": "1.2.3",
+    "jasmine-core": "~5.1.2",
+    "jasmine-spec-reporter": "~7.0.0",
     "karma": "~6.4.0",
-    "karma-chrome-launcher": "~3.1.0",
+    "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.0.0",
-    "ts-node": "~8.3.0",
-    "typescript": "~5.2.0"
+    "karma-jasmine-html-reporter": "~2.1.0",
+    "ts-node": "~10.9.2",
+    "typescript": "~5.4.5"
   },
   "description": "An Ionic project"
 }
