--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@types/mapbox-gl": "^3.1.0",
     "cordova-plugin-device": "^2.1.0",
     "ionicons": "^7.4.0",
+    "leaflet": "^1.9.4",
     "mapbox-gl": "^3.3.0",
     "rxjs": "~7.8.1",
     "swiper": "^11.1.1",
@@ -56,6 +57,7 @@
     "@capacitor/cli": "^6.0.0",
     "@ionic/angular-toolkit": "^11.0.1",
     "@types/jasmine": "~5.1.4",
+    "@types/leaflet": "^1.9.12",
     "@types/node": "^20.12.8",
     "@typescript-eslint/eslint-plugin": "7.8.0",
     "@typescript-eslint/parser": "7.8.0",
