--- a/package.json
+++ b/package.json
@@ -41,7 +41,6 @@
     "@types/mapbox-gl": "^3.1.0",
     "cordova-plugin-device": "^2.1.0",
     "ionicons": "^7.4.0",
-    "leaflet": "^1.9.4",
     "mapbox-gl": "^3.3.0",
     "rxjs": "~7.8.1",
     "swiper": "^11.1.1",
@@ -54,6 +53,7 @@
     "@angular-eslint/eslint-plugin-template": "^17.3.0",
     "@angular-eslint/schematics": "^17.3.0",
     "@angular-eslint/template-parser": "^17.3.0",
+    "@capacitor/assets": "^3.0.5",
     "@capacitor/cli": "^6.0.0",
     "@ionic/angular-toolkit": "^11.0.1",
     "@types/jasmine": "~5.1.4",
