--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "ionicons": "^7.4.0",
     "mapbox-gl": "^3.3.0",
     "ol": "^9.2.4",
+    "ol-mapbox-style": "^12.3.4",
     "rxjs": "~7.8.1",
     "swiper": "^11.1.1",
     "tslib": "^2.3.0",
