--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "rxjs": "~7.8.1",
     "swiper": "^11.1.1",
     "tslib": "^2.3.0",
+    "update": "^0.7.4",
     "uuid": "^9.0.1",
     "zone.js": "^0.14.5"
   },
