--- a/package.json
+++ b/package.json
@@ -24,28 +24,17 @@
     "@angular/platform-browser": "^17.0.0",
     "@angular/platform-browser-dynamic": "^17.0.0",
     "@angular/router": "^17.0.0",
-    "@awesome-cordova-plugins/android-permissions": "^6.8.0",
-    "@awesome-cordova-plugins/sqlite": "^6.8.0",
     "@capacitor-community/background-geolocation": "^1.2.17",
-    "@capacitor-community/http": "^1.4.1",
     "@capacitor/android": "6.1.0",
     "@capacitor/app": "^6.0.0",
     "@capacitor/core": "^6.0.0",
     "@capacitor/filesystem": "^6.0.0",
     "@capacitor/geolocation": "^6.0.0",
-    "@capacitor/haptics": "^6.0.0",
-    "@capacitor/keyboard": "^6.0.0",
-    "@capacitor/status-bar": "^6.0.0",
     "@ionic/angular": "^8.1.0",
     "@ionic/storage-angular": "^4.0.0",
-    "@mapbox/mapbox-sdk": "^0.16.0",
-    "@tomtom-international/web-sdk-maps": "^6.25.0",
-    "@tomtom-international/web-sdk-services": "^6.25.0",
+    "@mapbox/mbtiles": "^0.12.1",
     "@types/mapbox-gl": "^3.1.0",
-    "cordova-plugin-android-permissions": "^1.1.5",
-    "cordova-sqlite-storage": "^6.1.0",
     "ionicons": "^7.4.0",
-    "mapbox-gl": "^3.3.0",
     "ol": "^9.2.4",
     "ol-mapbox-style": "^12.3.4",
     "swiper": "^11.1.1",
