--- a/package.json
+++ b/package.json
@@ -13,50 +13,45 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-devkit/build-angular": "^17.0.1",
-    "@angular/cli": "^17.0.1",
     "@angular/common": "^17.0.0",
-    "@angular/compiler": "^17.0.0",
-    "@angular/compiler-cli": "^17.0.0",
     "@angular/core": "^17.0.0",
     "@angular/forms": "^17.0.0",
-    "@angular/language-service": "^17.0.0",
     "@angular/platform-browser": "^17.0.0",
     "@angular/platform-browser-dynamic": "^17.0.0",
     "@angular/router": "^17.0.0",
+    "@awesome-cordova-plugins/background-mode": "^6.9.0",
     "@capacitor-community/background-geolocation": "^1.2.17",
     "@capacitor/android": "6.1.0",
     "@capacitor/app": "^6.0.0",
     "@capacitor/core": "^6.0.0",
-    "@capacitor/filesystem": "^6.0.0",
+    "@capacitor/filesystem": "^6.0.1",
     "@capacitor/geolocation": "^6.0.0",
     "@ionic/angular": "^8.1.0",
     "@ionic/storage-angular": "^4.0.0",
-    "@mapbox/mbtiles": "^0.12.1",
-    "@types/mapbox-gl": "^3.1.0",
-    "adb": "^0.2.0",
-    "braces": "^3.0.3",
-    "gradle": "^1.2.4",
     "ionicons": "^7.4.0",
-    "micromatch": "^4.0.7",
-    "ol": "^10.0.0",
-    "ol-mapbox-style": "^12.3.4",
-    "swiper": "^11.1.9",
+    "ol": "^9.2.4",
+    "swiper": "^11.1.1",
     "tslib": "^2.3.0",
+    "uuid": "^9.0.1",
     "zone.js": "^0.14.5"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "^17.0.1",
     "@angular-eslint/eslint-plugin": "^17.3.0",
     "@angular-eslint/eslint-plugin-template": "^17.3.0",
     "@angular-eslint/schematics": "^17.3.0",
     "@angular-eslint/template-parser": "^17.3.0",
+    "@angular/cli": "^17.0.1",
+    "@angular/compiler": "^17.0.0",
+    "@angular/compiler-cli": "^17.0.0",
+    "@angular/language-service": "^17.0.0",
+    "@capacitor/assets": "^3.0.5",
     "@capacitor/cli": "^6.0.0",
     "@ionic/angular-toolkit": "^11.0.1",
     "@types/jasmine": "~5.1.4",
-    "@types/leaflet": "^1.9.12",
     "@types/node": "^20.12.8",
-    "@typescript-eslint/eslint-plugin": "^7.8.0",
-    "@typescript-eslint/parser": "^7.8.0",
+    "@typescript-eslint/eslint-plugin": "7.8.0",
+    "@typescript-eslint/parser": "7.8.0",
     "eslint": "^8.57.0",
     "eslint-plugin-import": "2.29.1",
     "eslint-plugin-jsdoc": "48.2.3",
