--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@capacitor/android": "6.1.0",
     "@capacitor/app": "^6.0.0",
     "@capacitor/core": "^6.0.0",
+    "@capacitor/dialog": "^6.0.1",
     "@capacitor/filesystem": "^6.0.1",
     "@capacitor/geolocation": "^6.0.0",
     "@ionic/angular": "^8.1.0",
