--- a/package.json
+++ b/package.json
@@ -21,11 +21,12 @@
     "@angular/router": "^17.0.0",
     "@capacitor-community/background-geolocation": "^1.2.17",
     "@capacitor/android": "6.1.0",
-    "@capacitor/app": "^6.0.0",
+    "@capacitor/app": "^6.0.1",
     "@capacitor/core": "^6.0.0",
     "@capacitor/dialog": "^6.0.1",
     "@capacitor/filesystem": "^6.0.1",
     "@capacitor/geolocation": "^6.0.0",
+    "@capawesome-team/capacitor-android-foreground-service": "^6.0.1",
     "@ionic/angular": "^8.1.0",
     "@ionic/storage-angular": "^4.0.0",
     "ionicons": "^7.4.0",
