--- a/package.json
+++ b/package.json
@@ -25,8 +25,11 @@
     "@capacitor/core": "^6.0.0",
     "@capacitor/filesystem": "^6.0.1",
     "@capacitor/geolocation": "^6.0.0",
+    "@capacitor/share": "^6.0.2",
+    "@capawesome-team/capacitor-android-foreground-service": "^6.0.1",
     "@ionic/angular": "^8.1.0",
     "@ionic/storage-angular": "^4.0.0",
+    "es6-promise-plugin": "^4.2.2",
     "ionicons": "^7.4.0",
     "ol": "^9.2.4",
     "swiper": "^11.1.1",
