--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "^17.0.0",
     "@angular/platform-browser-dynamic": "^17.0.0",
     "@angular/router": "^17.0.0",
+    "@awesome-cordova-plugins/social-sharing": "^6.12.0",
     "@capacitor-community/background-geolocation": "^1.2.17",
     "@capacitor/android": "^6.1.0",
     "@capacitor/app": "^6.0.1",
@@ -27,8 +28,11 @@
     "@capacitor/geolocation": "^6.0.0",
     "@capacitor/share": "^6.0.2",
     "@capawesome-team/capacitor-android-foreground-service": "^6.0.1",
+    "@capawesome/capacitor-background-task": "^6.0.0",
     "@ionic/angular": "^8.1.0",
     "@ionic/storage-angular": "^4.0.0",
+    "cordova-plugin-x-socialsharing": "^6.0.4",
+    "es6-promise-plugin": "^4.2.2",
     "ionicons": "^7.4.0",
     "ol": "^9.2.4",
     "swiper": "^11.1.1",
