--- a/android/app/capacitor.build.gradle
+++ b/android/app/capacitor.build.gradle
@@ -15,7 +15,8 @@ dependencies {
     implementation project(':capacitor-geolocation')
     implementation project(':capacitor-share')
     implementation project(':capawesome-team-capacitor-android-foreground-service')
-
+    implementation project(':capawesome-capacitor-background-task')
+    implementation "androidx.legacy:legacy-support-v4:1.0.0"
 }
 
 
