--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "@capacitor/android": "^6.1.0",
     "@capacitor/app": "^6.0.1",
     "@capacitor/core": "^6.0.0",
+    "@capacitor/device": "^6.0.2",
     "@capacitor/filesystem": "^6.0.1",
     "@capacitor/geolocation": "^6.0.0",
+    "@capacitor/screen-orientation": "^6.0.3",
     "@capacitor/share": "^6.0.2",
     "@capawesome-team/capacitor-android-foreground-service": "^6.0.1",
     "@capawesome/capacitor-background-task": "^6.0.0",
