--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@capacitor/device": "^6.0.2",
     "@capacitor/filesystem": "^6.0.1",
     "@capacitor/geolocation": "^6.0.0",
+    "@capacitor/local-notifications": "^6.1.1",
     "@capacitor/screen-orientation": "^6.0.3",
     "@capacitor/share": "^6.0.2",
     "@capawesome-team/capacitor-android-foreground-service": "^6.0.1",
