--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "ol": "^9.2.4",
     "swiper": "^11.1.1",
     "tslib": "^2.3.0",
+    "typescript": "^5.4.5",
     "uuid": "^9.0.1",
     "zone.js": "^0.14.5"
   },
@@ -72,8 +73,7 @@
     "karma-coverage-istanbul-reporter": "^3.0.2",
     "karma-jasmine": "^5.1.0",
     "karma-jasmine-html-reporter": "^2.1.0",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.4.5"
+    "ts-node": "^10.9.2"
   },
   "description": "An Ionic project"
 }
