--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@ionic/angular-toolkit": "^11.0.1",
     "@types/jasmine": "^5.1.4",
     "@types/node": "^20.12.8",
+    "@types/ol": "^6.5.3",
     "@typescript-eslint/eslint-plugin": "^7.8.0",
     "@typescript-eslint/parser": "^7.8.0",
     "eslint": "^8.57.0",
