--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <?xml version='1.0' encoding='utf-8'?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" package="io.elgros.paso">
     <application
-    android:allowBackup="true"
+    android:allowBackup="false"
+    android:fullBackupContent="false"
     android:largeHeap="true"
     android:icon="@mipmap/ic_launcher"
     android:label="@string/app_name"
