--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "^18.2.13",
     "@awesome-cordova-plugins/social-sharing": "^6.12.0",
     "@capacitor-community/background-geolocation": "^1.2.17",
+    "@capacitor-community/sqlite": "^6.0.2",
     "@capacitor/android": "^6.2.0",
     "@capacitor/app": "^6.0.1",
     "@capacitor/core": "^6.0.0",
@@ -36,6 +37,7 @@
     "@ionic/storage-angular": "^4.0.0",
     "ionicons": "^7.4.0",
     "ol": "^9.2.4",
+    "pako": "^2.1.0",
     "swiper": "^11.1.1",
     "tslib": "^2.3.0",
     "typescript": "^5.4.5",
@@ -53,6 +55,7 @@
     "@ionic/angular-toolkit": "^11.0.1",
     "@types/jasmine": "^5.1.4",
     "@types/ol": "^6.5.3",
+    "@types/pako": "^2.0.3",
     "@typescript-eslint/eslint-plugin": "^7.8.0",
     "@typescript-eslint/parser": "^7.8.0",
     "eslint": "^8.57.0",
