--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -18,6 +18,11 @@ android {
         }
     }
 
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_21
+        targetCompatibility JavaVersion.VERSION_21
+    }
+
     sourceSets {
         main {
             java.srcDirs += 'src/main/java'
