--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
     android:requestLegacyExternalStorage="true"
     android:usesCleartextTraffic="true">
         <activity 
-            android:configChanges="orientation|keyboardHidden|keyboard|screenSize|locale|smallestScreenSize|screenLayout|uiMode" 
+            android:configChanges="orientation|keyboardHidden|keyboard|screenSize|locale|smallestScreenSize|screenLayout|uiMode|navigation" 
             android:exported="true" 
             android:label="@string/title_activity_main" 
             android:launchMode="singleInstance" 
@@ -28,16 +28,26 @@
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
                 <category android:name="android.intent.category.DEFAULT" />
-                <category android:name="android.intent.category.BROWSABLE" />
-                <data android:scheme="file" />
-                <data android:scheme="content" />
+                <category npm update
+                :name="android.intent.category.BROWSABLE" />
+                
+                <!-- Handle file scheme URIs -->
+                <data android:scheme="file" android:host="*"/>
+
+                <!-- Handle content scheme URIs -->
+                <data android:scheme="content" android:host="*"/>
+                
+                <!-- Handle specific MIME types for GPX files -->
                 <data android:mimeType="application/gpx+xml" />
                 <data android:mimeType="application/xml" />
                 <data android:mimeType="text/xml" />
                 <data android:mimeType="application/octet-stream" />
+                
+                <!-- Handle file paths for GPX files -->
                 <data android:pathPattern=".*\\.gpx" />
                 <data android:pathPattern=".*\\.GPX" /> <!-- Case sensitivity -->
             </intent-filter>
+
         </activity>
         <provider android:authorities="${applicationId}.fileprovider" android:exported="false" android:grantUriPermissions="true" android:name="androidx.core.content.FileProvider">
             <meta-data android:name="android.support.FILE_PROVIDER_PATHS" android:resource="@xml/file_paths" />
