--- a/package.json
+++ b/package.json
@@ -19,28 +19,27 @@
     "@angular/platform-browser": "^18.2.13",
     "@angular/platform-browser-dynamic": "^18.2.13",
     "@angular/router": "^18.2.13",
-    "@awesome-cordova-plugins/social-sharing": "^6.12.0",
     "@capacitor-community/background-geolocation": "^1.2.17",
-    "@capacitor-community/sqlite": "^6.0.2",
-    "@capacitor/android": "^6.2.0",
-    "@capacitor/app": "^6.0.1",
-    "@capacitor/core": "^6.0.0",
-    "@capacitor/device": "^6.0.2",
-    "@capacitor/filesystem": "^6.0.1",
-    "@capacitor/geolocation": "^6.1.0",
-    "@capacitor/local-notifications": "^6.1.1",
-    "@capacitor/screen-orientation": "^6.0.3",
-    "@capacitor/share": "^6.0.2",
-    "@capawesome-team/capacitor-android-foreground-service": "^6.0.1",
-    "@capawesome/capacitor-background-task": "^6.0.0",
+    "@capacitor-community/sqlite": "^7.0.0",
+    "@capacitor/android": "^7.0.0",
+    "@capacitor/app": "^7.0.0",
+    "@capacitor/core": "^7.0.0",
+    "@capacitor/device": "^7.0.0",
+    "@capacitor/filesystem": "^7.0.0",
+    "@capacitor/geolocation": "^7.0.0",
+    "@capacitor/local-notifications": "^7.0.0",
+    "@capacitor/screen-orientation": "^7.0.0",
+    "@capacitor/share": "^7.0.0",
+    "@capawesome-team/capacitor-android-foreground-service": "^7.0.1",
+    "@capawesome/capacitor-background-task": "^7.0.1",
     "@ionic/angular": "^8.1.0",
     "@ionic/storage-angular": "^4.0.0",
     "ionicons": "^7.4.0",
-    "ol": "^9.2.4",
+    "ol": "^10.4.0",
     "pako": "^2.1.0",
     "swiper": "^11.1.1",
     "tslib": "^2.3.0",
-    "typescript": "^5.4.5",
+    "typescript": "^5.8.2",
     "zone.js": "^0.14.5"
   },
   "devDependencies": {
@@ -51,7 +50,7 @@
     "@angular/cli": "^18.2.14",
     "@angular/compiler": "^18.2.13",
     "@angular/compiler-cli": "^18.2.13",
-    "@capacitor/cli": "^6.0.0",
+    "@capacitor/cli": "^7.0.0",
     "@ionic/angular-toolkit": "^11.0.1",
     "@types/jasmine": "^5.1.4",
     "@types/ol": "^6.5.3",
@@ -69,8 +68,7 @@
     "karma-coverage": "^2.2.0",
     "karma-coverage-istanbul-reporter": "^3.0.2",
     "karma-jasmine": "^5.1.0",
-    "karma-jasmine-html-reporter": "^2.1.0",
-    "ts-node": "^10.9.2"
+    "karma-jasmine-html-reporter": "^2.1.0"
   },
   "description": "An Ionic project"
 }
