--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@ionic/angular": "^8.1.0",
     "@ionic/storage-angular": "^4.0.0",
     "ionicons": "^7.4.0",
+    "lodash": "^4.17.21",
     "ol": "^10.4.0",
     "pako": "^2.1.0",
     "swiper": "^11.1.1",
@@ -53,6 +54,7 @@
     "@capacitor/cli": "^7.0.0",
     "@ionic/angular-toolkit": "^12.1.1",
     "@types/jasmine": "^5.1.4",
+    "@types/lodash": "^4.17.17",
     "@types/ol": "^6.5.3",
     "@types/pako": "^2.0.3",
     "@typescript-eslint/eslint-plugin": "^8.26.1",
