--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@capawesome/capacitor-background-task": "^7.0.1",
     "@ionic/angular": "^8.1.0",
     "@ionic/storage-angular": "^4.0.0",
+    "dompurify": "^3.2.6",
     "ionicons": "^7.4.0",
     "lodash": "^4.17.21",
     "ol": "^10.4.0",
@@ -53,6 +54,7 @@
     "@angular/compiler-cli": "^19.2.2",
     "@capacitor/cli": "^7.0.0",
     "@ionic/angular-toolkit": "^12.1.1",
+    "@types/dompurify": "^3.0.5",
     "@types/jasmine": "^5.1.4",
     "@types/lodash": "^4.17.17",
     "@types/ol": "^6.5.3",
