--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,3 +1,9 @@
+/**
+ * Configures the Android build settings for the project, including namespace, SDK versions,
+ * application ID, Java 17 compatibility, source sets, and build types.
+ * Also specifies ProGuard rules and asset ignore patterns for packaging.
+ */
+
 apply plugin: 'com.android.application'
 
 android {
@@ -12,15 +18,21 @@ android {
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         aaptOptions {
-            // Files and dirs to omit from the packaged assets dir, modified to accommodate modern web apps.
-            // Default: https://android.googlesource.com/platform/frameworks/base/+/282e181b58cf72b6ca770dc7ca5f91f135444502/tools/aapt/AaptAssets.cpp#61
             ignoreAssetsPattern '!.svn:!.git:!.ds_store:!*.scc:.*:!CVS:!thumbs.db:!picasa.ini:!*~'
         }
     }
 
+    // 1) Your Java 17 settings
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_21
-        targetCompatibility JavaVersion.VERSION_21
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
+    }
+
+    // 2) Java toolchain – the supported way to lock to JDK 17
+    java {
+        toolchain {
+            languageVersion = JavaLanguageVersion.of(17)
+        }
     }
 
     sourceSets {
@@ -55,7 +67,10 @@ dependencies {
     implementation project(':capacitor-cordova-android-plugins')
 }
 
+// 3) Apply Capacitor’s generated script (it will temporarily set Java 21)
 apply from: 'capacitor.build.gradle'
+
+// 4) No --release hacks here! Let compileOptions + toolchain do the work.
 
 try {
     def servicesJSON = file('google-services.json')
