--- a/package.json
+++ b/package.json
@@ -32,36 +32,35 @@
     "@capacitor/share": "^7.0.0",
     "@capawesome-team/capacitor-android-foreground-service": "^7.0.1",
     "@capawesome/capacitor-background-task": "^7.0.1",
-    "@ionic/angular": "^8.1.0",
+    "@ionic/angular": "^8.6.3",
     "@ionic/storage-angular": "^4.0.0",
     "dompurify": "^3.2.6",
-    "ionicons": "^7.4.0",
+    "ionicons": "^8.0.11",
     "lodash": "^4.17.21",
     "ol": "^10.4.0",
     "pako": "^2.1.0",
     "swiper": "^11.1.1",
     "tslib": "^2.3.0",
-    "typescript": "^5.8.2",
     "zone.js": "^0.15.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^20.0.5",
-    "@angular-eslint/eslint-plugin": "^19.2.1",
-    "@angular-eslint/eslint-plugin-template": "^19.2.1",
-    "@angular-eslint/schematics": "^19.2.1",
+    "@angular-eslint/eslint-plugin": "^20.1.1",
+    "@angular-eslint/eslint-plugin-template": "^20.1.1",
+    "@angular-eslint/schematics": "^20.1.1",
     "@angular/cli": "^20.0.5",
     "@angular/compiler": "^20.0.6",
     "@angular/compiler-cli": "^20.0.6",
     "@capacitor/cli": "^7.0.0",
-    "@ionic/angular-toolkit": "^12.1.1",
+    "@ionic/angular-toolkit": "^12.2.0",
     "@types/dompurify": "^3.0.5",
     "@types/jasmine": "^5.1.4",
     "@types/lodash": "^4.17.17",
     "@types/ol": "^6.5.3",
     "@types/pako": "^2.0.3",
-    "@typescript-eslint/eslint-plugin": "^8.26.1",
-    "@typescript-eslint/parser": "^8.26.1",
-    "eslint": "^9.22.0",
+    "@typescript-eslint/eslint-plugin": "^8.33.1",
+    "@typescript-eslint/parser": "^8.33.1",
+    "eslint": "^9.28.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-jsdoc": "^51.0.0",
     "eslint-plugin-prefer-arrow": "^1.2.3",
@@ -72,7 +71,8 @@
     "karma-coverage": "^2.2.0",
     "karma-coverage-istanbul-reporter": "^3.0.2",
     "karma-jasmine": "^5.1.0",
-    "karma-jasmine-html-reporter": "^2.1.0"
+    "karma-jasmine-html-reporter": "^2.1.0",
+    "typescript": "^5.8.3"
   },
   "description": "An Ionic project"
 }
