sharing via whatsapp

--- a/android/app/capacitor.build.gradle
+++ b/android/app/capacitor.build.gradle
@@ -20,6 +20,7 @@ dependencies {
     implementation project(':capacitor-share')
     implementation project(':capawesome-team-capacitor-android-foreground-service')
     implementation project(':capawesome-capacitor-background-task')
+    implementation "androidx.webkit:webkit:1.4.0"
     implementation "androidx.legacy:legacy-support-v4:1.0.0"
 }
 
