--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "^20.0.6",
     "@angular/platform-browser-dynamic": "^20.0.6",
     "@angular/router": "^20.0.6",
+    "@awesome-cordova-plugins/file": "^8.1.0",
     "@awesome-cordova-plugins/file-path": "^8.1.0",
     "@awesome-cordova-plugins/social-sharing": "^8.1.0",
     "@capacitor-community/background-geolocation": "^1.2.17",
@@ -38,6 +39,7 @@
     "@ionic/storage-angular": "^4.0.0",
     "@ngx-translate/core": "^16.0.4",
     "@ngx-translate/http-loader": "^16.0.1",
+    "cordova-plugin-file": "^8.1.3",
     "cordova-plugin-filepath": "^1.6.0",
     "cordova-plugin-x-socialsharing": "^6.0.4",
     "dompurify": "^3.2.6",
