--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "ionicons": "^7.4.0",
     "lodash": "^4.17.21",
     "ol": "^10.6.1",
+    "ol-mapbox-style": "^13.1.0",
     "pako": "^2.1.0",
     "swiper": "^11.1.1",
     "tslib": "^2.3.0",
