--- a/package.json
+++ b/package.json
@@ -22,17 +22,19 @@
     "@awesome-cordova-plugins/file": "^8.1.0",
     "@awesome-cordova-plugins/file-path": "^8.1.0",
     "@awesome-cordova-plugins/social-sharing": "^8.1.0",
-    "@capacitor-community/background-geolocation": "^1.2.17",
+    "@capacitor-community/background-geolocation": "^1.2.26",
     "@capacitor-community/speech-recognition": "^7.0.1",
     "@capacitor-community/sqlite": "^7.0.0",
-    "@capacitor/android": "^7.0.0",
-    "@capacitor/app": "^7.0.0",
-    "@capacitor/core": "^7.0.0",
-    "@capacitor/device": "^7.0.0",
+    "@capacitor/android": "7.4.4",
+    "@capacitor/app": "^7.1.0",
+    "@capacitor/app-launcher": "^7.0.1",
+    "@capacitor/core": "^7.4.4",
+    "@capacitor/device": "^7.0.2",
     "@capacitor/filesystem": "^7.0.0",
-    "@capacitor/geolocation": "^7.0.0",
+    "@capacitor/geolocation": "^7.1.6",
     "@capacitor/local-notifications": "^7.0.0",
-    "@capacitor/screen-orientation": "^7.0.0",
+    "@capacitor/push-notifications": "^7.0.4",
+    "@capacitor/screen-orientation": "^7.0.2",
     "@capacitor/share": "^7.0.0",
     "@capawesome-team/capacitor-android-foreground-service": "^7.0.1",
     "@capawesome/capacitor-background-task": "^7.0.1",
@@ -53,6 +55,7 @@
     "ol": "^10.6.1",
     "ol-mapbox-style": "^13.1.0",
     "pako": "^2.1.0",
+    "react-native": "^0.83.1",
     "swiper": "^11.1.1",
     "tslib": "^2.3.0",
     "zone.js": "^0.15.0"
@@ -66,7 +69,7 @@
     "@angular/compiler": "^20.0.6",
     "@angular/compiler-cli": "^20.0.6",
     "@capacitor/assets": "^3.0.5",
-    "@capacitor/cli": "^7.0.0",
+    "@capacitor/cli": "^7.4.4",
     "@ionic/angular-toolkit": "^12.2.0",
     "@types/angular": "^1.8.9",
     "@types/dompurify": "^3.0.5",
