--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,8 @@
     "allowSyntheticDefaultImports": true,
     "skipLibCheck": true,
     "typeRoots": [
-      "node_modules/@types"
+      "node_modules/@types",
+      "./src/types" 
     ]
   },
   "angularCompilerOptions": {
