--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@capawesome/capacitor-background-task": "^7.0.1",
     "@ionic/angular": "^8.6.3",
     "@ionic/storage-angular": "^4.0.0",
+    "@mapbox/polyline": "^1.2.1",
     "@ngx-translate/core": "^16.0.4",
     "@ngx-translate/http-loader": "^16.0.1",
     "@supabase/supabase-js": "^2.81.1",
@@ -52,6 +53,7 @@
     "html-to-image": "^1.11.13",
     "html2canvas": "^1.4.1",
     "ionicons": "^7.4.0",
+    "jspdf": "^4.0.0",
     "lodash": "^4.17.21",
     "ol": "^10.6.1",
     "ol-mapbox-style": "^13.1.0",
@@ -76,6 +78,7 @@
     "@types/dompurify": "^3.0.5",
     "@types/jasmine": "^5.1.4",
     "@types/lodash": "^4.17.17",
+    "@types/mapbox__polyline": "^1.0.5",
     "@types/ol": "^6.5.3",
     "@types/pako": "^2.0.3",
     "@typescript-eslint/eslint-plugin": "^8.33.1",
