chore: project stabilized on Node 22 and dependencies fixed

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@capacitor/device": "^7.0.2",
     "@capacitor/filesystem": "^7.0.0",
     "@capacitor/geolocation": "^7.1.6",
+    "@capacitor/keyboard": "^7.0.4",
     "@capacitor/local-notifications": "^7.0.0",
     "@capacitor/push-notifications": "^7.0.4",
     "@capacitor/screen-orientation": "^7.0.2",
@@ -50,6 +51,7 @@
     "cordova-plugin-x-socialsharing": "^6.0.4",
     "dompurify": "^3.2.6",
     "es6-promise-plugin": "^4.2.2",
+    "fix": "^0.0.6",
     "html-to-image": "^1.11.13",
     "html2canvas": "^1.4.1",
     "ionicons": "^7.4.0",
