--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,8 +1,8 @@
 plugins {
     id 'com.android.application'
 //    id 'kotlin-android'  // rem
-    id 'org.jetbrains.kotlin.android' // add 
-    id 'kotlin-kapt'  // add 
+    id 'org.jetbrains.kotlin.android' // add
+    id 'kotlin-kapt'  // add
 }
 
 android {
@@ -10,12 +10,12 @@ android {
     compileSdk rootProject.ext.compileSdkVersion
     sourceSets {
         main {
-            java.srcDirs += 'src/main/java' 
+            java.srcDirs += 'src/main/java'
             kotlin.srcDirs += 'src/main/kotlin'
         }
     }
     defaultConfig {
-        applicationId "io.elgros.paso" 
+        applicationId "io.elgros.paso"
         multiDexEnabled true
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
@@ -50,6 +50,7 @@ dependencies {
     implementation 'androidx.multidex:multidex:2.0.1'
     implementation 'androidx.core:core-ktx:1.12.0'
     implementation project(':capacitor-android')
+    implementation project(':capacitor-community-sqlite')
     implementation project(':capacitor-cordova-android-plugins')
     testImplementation "junit:junit:$junitVersion"
     androidTestImplementation "androidx.test.ext:junit:$androidxJunitVersion"
